retains blogs only

--- a/layouts/index.html
+++ b/layouts/index.html
@@ -30,11 +30,9 @@
         </h1>
         <nav>
           <ul>
-            <li><a href="/about">about</a></li>
-            <li><a href="/posts">posts</a></li>
-            <li><a href="/resume/Hitesh-Pattanayak-Resume-2024.pdf">resume</a></li>
-            <li><a href="https://github.com/hiteshrepo">gitHub</a></li>
-            <li><a href="https://linkedin.com/in/hitesh-pattanayak">linked-in</a></li>
+            <li><a href="https://hiteshrepo.github.io/#about">about</a></li>
+            <li><a href="/technical">tech</a></li>
+            <li><a href="/nontechnical">non-tech</a></li>
           </ul>
         </nav>
       </div>
