--- a/layouts/projects/single.html
+++ b/layouts/projects/single.html
@@ -6,7 +6,7 @@
         <div class="meta-icon org">🏢</div>
         <div class="meta-content">
             <div class="meta-label">Organization</div>
-            <div class="meta-value">Tech Innovations Inc.</div>
+            <div class="meta-value">{{ .Params.organization }}</div>
         </div>
     </div>
     
@@ -14,7 +14,7 @@
         <div class="meta-icon role">👤</div>
         <div class="meta-content">
             <div class="meta-label">Role</div>
-            <div class="meta-value">Senior Software Engineer</div>
+            <div class="meta-value">{{ .Params.role }}</div>
         </div>
     </div>
     
@@ -23,11 +23,14 @@
         <div class="meta-content">
             <div class="meta-label">Duration</div>
             <div class="meta-value">
-                Jan 2023 - Present
+              {{ dateFormat "Jan 2006" .Params.startDate }} - 
+              {{ if eq .Params.endDate "2025-06-11" }}Present{{ else }}{{ dateFormat "Jan 2006" .Params.endDate }}{{ end }}
+              {{ if eq .Params.endDate "2025-06-11" }} 
                 <span class="current-badge">
                     <span class="pulse-dot"></span>
                     Current
                 </span>
+              {{ end }}
             </div>
         </div>
     </div>
