--- a/layouts/_default/baseof.html
+++ b/layouts/_default/baseof.html
@@ -6,9 +6,9 @@
   <title>{{ if .IsHome }}{{ .Site.Title }}{{ else }}{{ .Title }} | {{ .Site.Title }}{{ end }}</title>
   <meta name="description" content="{{ if .IsHome }}{{ .Site.Params.description }}{{ else }}{{ .Description }}{{ end }}">
   <meta name="viewport" content="width=device-width,minimum-scale=1">
-  {{ .Hugo.Generator }}
+  {{ hugo.Generator }}
   {{ block "favicon" . }}
-    {{ partials "site-favicon.html" . }}
+    {{ partial "site-favicon.html" . }}
   {{ end }}
   {{ if .Site.Params.custom_css }}
     {{ range .Site.Params.custom_css }}
@@ -37,6 +37,6 @@
     {{ block "main" . }}{{ end }}
   </main>
   {{ block "footer" . }}{{ partial "site-footer.html" . }}{{ end }}
-  {{ block "scripts" . }}{{ partials "site-scripts.html" . }}{{ end }}
+  {{ block "scripts" . }}{{ partial "site-scripts.html" . }}{{ end }}
 </body>
 </html>
